# Not-Practice-shooting-to-reach-S-rank

./: .gitignore  README.md  pyproject.toml  title.md
configs/: realtime_cpu.yaml  realtime_cpu_fast.yaml  realtime_cpu_stable.yaml  realtime_mps.yaml  realtime_mps_fast.yaml  realtime_mps_stable.yaml  realtime_win_cpu.yaml  realtime_win_cuda.yaml  realtime_win_overlay_cuda.yaml
docs/plans/: 2026-03-06-centered-roi-overlay-gated-design.md  2026-03-06-centered-roi-overlay-gated.md  2026-03-06-l-hotkey-toggle-design.md  2026-03-06-l-hotkey-toggle.md  2026-03-06-screen-human-lab-design.md  2026-03-06-screen-human-lab.md  2026-03-06-single-target-lock-design.md  2026-03-06-single-target-lock.md  2026-03-09-adaptive-lock-design.md  2026-03-09-adaptive-lock.md  2026-03-09-cursor-incremental-follow-design.md  2026-03-09-cursor-incremental-follow.md  2026-03-09-dxdy-overlay-design.md  2026-03-09-dxdy-overlay.md  2026-03-09-half-roi-detection-design.md  2026-03-09-half-roi-detection.md  2026-03-09-tracking-parameter-presets-design.md  2026-03-09-tracking-parameter-presets.md  2026-03-12-windows-continuation-handoff.md  (+2 more)
tests/: test_capture.py  test_cli_runtime.py  test_config.py  test_factory.py  test_gated_runtime.py  test_global_motion.py  test_lock_state.py  test_metrics.py  test_mps_runtime.py  test_overlay.py  test_overlay_control.py  test_overlay_state.py  test_preview_runtime.py  test_project_files.py  test_recording.py  test_roi.py  test_runtime.py  test_target_filter.py  test_target_scoring.py  test_template_tracker.py  test_windows_overlay.py
(+31 files in other folders)
